--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,79 @@
-
-<html ng-app="sportsApp">
+<!DOCTYPE html>
+<html ng-app="sportsApp" lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTTP Post Example</title>
-  <style>
-    .player {
-      padding: 10px;
-    }
-  </style>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.4/angular-material.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angular-ui-router/1.0.0-rc.1/angular-ui-router.min.js"></script>
 </head>
 
 <body ng-controller="MainCtrl">
-  <h1>Hello Servers!</h1>
   <hr>
-  <div class="well">
-      <button type="button" class="btn btn-default" ng-click="fetchAssets()">
-          Issue Asset
-      </button>
-      <button type="button" class="btn btn-default">
-        Insert data to DB
-      </button>
-      <button type="button" class="btn btn-default">
-          Update list
-      </button>
+  <div class="container">
+      <div class="jumbotron">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">
+                  <h1>Hello Servers!</h1>
+              </h3>
+            </div>
+            <div class="panel-body">
+                    <button type="button" class="btn btn-default" ng-click="fetchInfo()">
+                        GET INFO
+                    </button>
+                    <button type="button" class="btn btn-default">
+                      Insert data to DB
+                    </button>
+                    <button type="button" class="btn btn-default">
+                        Update list
+                    </button>
+            </div>
+            <div class="panel-footer">
+
+            </div>
+          </div>
+          <hr>
+          <div class="well well-sm">
+              <div class="assetList">
+                  <div class="">
+                      <label for="">Version</label>
+                      <span ng-bind='infobox.version'></span>
+                  </div>
+                  <div class="">
+                      <label for="">Name of Blockchain</label>
+                      <span ng-bind='infobox.chainname'></span>
+                  </div>
+                  <div class="">
+                      <label for="">Description</label>
+                      <span ng-bind='infobox.description'></span>
+                  </div>
+                  <div class="">
+                      <label for="">Balance</label>
+                      <span ng-bind='infobox.balance'></span>
+                  </div>
+                  <div class="">
+                      <label for="">Blocks:</label>
+                      <span ng-bind='infobox.blocks'></span>
+                  </div>
+                  <div class="">
+                      <label for="">Errors:</label>
+                      <span ng-bind='infobox.errors'></span>
+                  </div>
+              </div>
+          </div>
+      </div>
+
   </div>
   <hr>
+
   <div ng-repeat="player in players" class="player">
     <div>
         <span ng-bind="player.name"></span>
@@ -57,48 +106,15 @@
              value="Add"
              ng-disabled="addForm.$invalid">
     </form>
+
   </div>
 
-<script
-  src="angular.min.js">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="./app.js">
+
 </script>
-<script>
-  angular.module('sportsApp', [])
-    .controller('MainCtrl', function($scope, $http) {
-      $scope.players = [];
-      $scope.newplayer = {};
-      $scope.listAssets = [];
 
-      var fetchPlayers = function() {
-
-         return $http.get('/demo/getplayers').then(function(response) {
-          $scope.players = response.data;
-        }, function(errResponse) {
-          console.error('Error while fetching players');
-        });
-      };
-
-      fetchPlayers();
-
-      $scope.addplayer = function() {
-        $http.post('/demo/insertplayer', $scope.newplayer).then(function(response) {
-
-			fetchPlayers();
-
-		}, function(errResponse) {
-          console.error('Error while inserting player');
-        });
-      };
-
-      $scope.fetchAssets = function(){
-              $http.post('/demo/getAsset').then(function(response){
-                  $scope.listAssets = response.data;
-              },
-              function(errResponse){
-                  console.error('Error while fetching Assets');
-              });
-          }
-    });
-</script>
 </body>
 </html>
