--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,19 @@
                     <button type="button" class="btn btn-default" ng-click="fetchInfo()">
                         GET INFO
                     </button>
-                    <button type="button" class="btn btn-default">
-                      Insert data to DB
+                    <button type="button" class="btn btn-default" ng-click='fetchHelp()'>
+                      MANUAL
                     </button>
                     <button type="button" class="btn btn-default">
                         Update list
                     </button>
             </div>
             <div class="panel-footer">
-
+                <label for="HELP">
+                    <div class=" well well-sm">
+                        <span ng-bind='helpbox'></span>
+                    </div>
+                </label>
             </div>
           </div>
           <hr>
