--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,22 @@
                     <button type="button" class="btn btn-default" ng-click='fetchHelp()'>
                       MANUAL
                     </button>
-                    <button type="button" class="btn btn-default">
-                        Update list
+                    <button type="button" class="btn btn-default" ng-click='fetchAddresses()'>
+                        GET ADDRESSES
+                    </button>
+                    <button type="button" class="btn btn-default" ng-click='getNewAddress()'>
+                    GEN NEW ADDRESS
                     </button>
             </div>
             <div class="panel-footer">
                 <label for="HELP">
                     <div class=" well well-sm">
                         <span ng-bind='helpbox'></span>
+                    </div>
+                </label>
+                <label for="newAddressList">
+                    <div class="well well-sm">
+                        <span ng-bind='newAddressList'></span>
                     </div>
                 </label>
             </div>
